add delete task route
