# docs/api.yaml
@@ -31,6 +31,9 @@ paths:
               schema:
                 type: object
                 properties:
+                  success:
+                    type: boolean
+                    default: true
                   code:
                     type: integer
                     example: 200
@@ -90,6 +93,9 @@ paths:
               schema:
                 type: object
                 properties:
+                  success:
+                    type: boolean
+                    default: true
                   code:
                     type: integer
                     example: 201
@@ -103,6 +109,9 @@ paths:
               schema:
                 type: object
                 properties:
+                  success:
+                    type: boolean
+                    default: false
                   code:
                     type: integer
                     example: 400
@@ -140,6 +149,9 @@ paths:
               schema:
                 type: object
                 properties:
+                  success:
+                    type: boolean
+                    default: true
                   code:
                     type: integer
                     example: 200
@@ -153,12 +165,15 @@ paths:
               schema:
                 type: object
                 properties:
+                  success:
+                    type: boolean
+                    default: false
                   code:
                     type: integer
                     example: 401
                   message:
                     type: string
-                    example: 'Username or Password is incorrect.'
+                    example: 'Invalid credentials.'
         '404':
           description: User not found
           content:
@@ -166,6 +181,9 @@ paths:
               schema:
                 type: object
                 properties:
+                  success:
+                    type: boolean
+                    default: false
                   code:
                     type: integer
                     example: 404
@@ -228,6 +246,9 @@ paths:
               schema:
                 type: object
                 properties:
+                  success:
+                    type: boolean
+                    default: true
                   code:
                     type: integer
                     example: 201
@@ -241,12 +262,17 @@ paths:
               schema:
                 type: object
                 properties:
+                  success:
+                    type: boolean
+                    default: false
                   code:
                     type: integer
                     example: 400
                   message:
                     type: string
                     example: 'User already registered.'
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
 
   /api/tasks:
     get:
@@ -262,6 +288,9 @@ paths:
               schema:
                 type: object
                 properties:
+                  success:
+                    type: boolean
+                    default: true
                   code:
                     type: integer
                     example: 200
@@ -292,6 +321,8 @@ paths:
                         userId:
                           type: string
                           example: '66fd11097117de26aae7ceda'
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
         '404':
           description: No tasks found for this user
           content:
@@ -299,6 +330,9 @@ paths:
               schema:
                 type: object
                 properties:
+                  success:
+                    type: boolean
+                    default: false
                   code:
                     type: integer
                     example: 404
@@ -312,14 +346,14 @@ paths:
       description: Retrieve a task using its unique ID.
       security:
         - accessToken: []
-
       parameters:
         - in: path
           name: taskId
           required: true
-          description: ID of the task to retrieve
+          description: ID of the task to delete
           schema:
             type: string
+            example: '66fd11097117de26aae7cedf'
       responses:
         '200':
           description: Task retrieved successfully
@@ -328,6 +362,9 @@ paths:
               schema:
                 type: object
                 properties:
+                  success:
+                    type: boolean
+                    default: true
                   code:
                     type: integer
                     example: 200
@@ -356,6 +393,8 @@ paths:
                       userId:
                         type: string
                         example: '66fd11097117de26aae7ceda'
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
         '404':
           description: Task not found
           content:
@@ -363,12 +402,81 @@ paths:
               schema:
                 type: object
                 properties:
+                  success:
+                    type: boolean
+                    default: false
                   code:
                     type: integer
                     example: 404
                   message:
                     type: string
                     example: 'Task is not found by the id.'
+
+    delete:
+      summary: Delete a task by ID
+      description: Delete a task by its unique ID, ensuring that the task belongs to the authenticated user.
+      security:
+        - accessToken: [] # Requires accessToken for authentication
+      parameters:
+        - in: path
+          name: taskId
+          required: true
+          description: ID of the task to delete
+          schema:
+            type: string
+            example: '66fd11097117de26aae7cedf'
+      responses:
+        '200':
+          description: Task deleted successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    default: true
+                  code:
+                    type: integer
+                    example: 200
+                  message:
+                    type: string
+                    example: 'Task deleted successfully.'
+        '400':
+          description: Missing task ID
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    default: false
+                  code:
+                    type: integer
+                    example: 400
+                  message:
+                    type: string
+                    example: 'Missing task id.'
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
+
+        '404':
+          description: Task not found or not authorized
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    default: false
+                  code:
+                    type: integer
+                    example: 404
+                  message:
+                    type: string
+                    example: 'Task not found or not authorized to delete.'
 
 components:
   securitySchemes:
@@ -377,3 +485,21 @@ components:
       in: cookie
       name: accessToken
       description: 'Authentication token for user session.'
+
+  responses:
+    UnauthorizedError:
+      description: Unauthorized request due to missing or invalid credentials.
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              success:
+                type: boolean
+                default: false
+              code:
+                type: integer
+                example: 401
+              message:
+                type: string
+                example: 'Unauthorized access.'
